--- a/static/css/main.css
+++ b/static/css/main.css
@@ -259,6 +259,40 @@ header.name {
 
 figure { margin-inline-start: 0;margin-inline-end: 0; margin-block-end: 0; margin-block-start: 0;}
 
+.container article.list-item h1 {
+    margin-bottom: 0.1em;
+}
+.container article.list-item h1 a:not(.image) {
+    font-weight: 900;
+    letter-spacing: -0.06em;
+    text-transform: lowercase;
+    color: var(--color-4-dark);
+}
+.container article.list-item h1 a:not(.image), .container article.list-item h1 a:not(.image):hover {
+    color: var(--color-4-dark);
+}
+
+.container article.list-item h1 a:not(.image):after, .container article.list-item h1 a:not(.image):hover:after {
+    background: var(--color-4-dark);
+}
+.container article.list-item a:not(.image):after, .container article.list-item a:not(.image):hover:after {
+    height: 2px;
+}
+.container article.list-item time {
+    text-transform: lowercase;
+    font-style: italic;
+}
+.container article.list-item code {
+    font-size: 0.8em;
+}
+.container article.list-item pre {
+    margin: 0.6em 0;
+}
+
+.container.back {
+    margin: 0 auto;
+    font-size: 2em;
+}
 
 @media screen and (max-width: 479px) {
     header {
