--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="container">
-    {{ with .Site.Params.header }}<header class="name">{{ . }}</header>{{ end }}
+    {{ with .Site.Params.header }}<header class="name"><a href="/" class="name">{{ . }}</a></header>{{ end }}
     {{ with .Site.Params.tagline }}<p>{{ . }}</p>{{ end }}
     {{ with .Site.Params.social }}
         <ul class="social">
