--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,26 +1,10 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, shrink-to-fit=0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <title>{{ .Title }}</title>
-  <link rel="stylesheet" type="text/css" href="/css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="/css/main.css">
-</head>
+{{ partial "head.html" . }}
 <body>
-  <div class="container">
-    {{ with .Site.Params.header }}<header class="name">{{ . }}</header>{{ end }}
-    {{ with .Site.Params.tagline }}<p>{{ . }}</p>{{ end }}
-    {{ with .Site.Params.social }}
-        <ul class="social">
-        {{ range  . }}
-        <li><a href="{{ .url }}">{{ .name }}</a></li>
-        {{ end }}
-        </ul>
-    {{ end }}
-  </div>
+  {{ partial "header.html" . }}
   {{ partial "main.html" . }}
-  <div class="container footer">CC0. Powered by <a href="https://gohugo.io/">Hugo</a>. Theme inspired by <a href="https://www.mattdesl.com/">@mattdesl</a> and <a href="https://ozafoto.com/digital/">Oza</a>.</div>
+  {{ partial "footer.html" . }}
 </body>
 </html>
