--- a/static/css/main.css
+++ b/static/css/main.css
@@ -144,7 +144,7 @@ header.name {
     margin: auto
 }
 
-.work {
+.masonry {
     text-align: left;
     display: inline-block;
     position: relative;
@@ -154,11 +154,11 @@ header.name {
     margin-bottom: 1em;
 }
 
-.work .grid-item {
+.masonry .grid-item {
     position: absolute;
 }
 
-.work .grid-item>.image {
+.masonry .grid-item>.image {
     transition: opacity .4s cubic-bezier(.19, 1, .22, 1);
     transition-delay: 0s;
     cursor: pointer;
@@ -174,7 +174,7 @@ header.name {
     z-index: 0
 }
 
-.work .grid-item .grid-item-overlay {
+.masonry .grid-item .grid-item-overlay {
     color: var(--color-2);
     position: absolute;
     top: 0;
@@ -191,20 +191,20 @@ header.name {
     box-sizing: border-box;
 }
 
-.work .grid-item .grid-item-overlay:hover {
+.masonry .grid-item .grid-item-overlay:hover {
     transition: opacity .8s cubic-bezier(.19, 1, .22, 1);
     transition-delay: 0s;
     opacity: 1
 }
 
-.work .grid-item .grid-item-overlay:hover .text {
+.masonry .grid-item .grid-item-overlay:hover .text {
     transition: all .8s cubic-bezier(.19, 1, .22, 1);
     transition-delay: .125s;
     opacity: 1;
     transform: translateY(0) skewX(0deg)
 }
 
-.work .grid-item .grid-item-overlay::before {
+.masonry .grid-item .grid-item-overlay::before {
     width: 100%;
     height: 100%;
     content: ' ';
@@ -216,7 +216,7 @@ header.name {
     background: var(--color-3-dark)
 }
 
-.work .grid-item .grid-item-overlay>.text {
+.masonry .grid-item .grid-item-overlay>.text {
     padding: 20px;
     display: table-cell;
     vertical-align: middle;
@@ -226,7 +226,7 @@ header.name {
     transform: translateY(8px) skewY(2deg)
 }
 
-.work .grid-item div.text>.title {
+.masonry .grid-item div.text>.title {
     font-size: 1.1em;
     font-family: var(--font-header);
     text-transform: uppercase;
@@ -236,7 +236,7 @@ header.name {
     letter-spacing: -0.06em;
 }
 
-.work .grid-item div.text>.info {
+.masonry .grid-item div.text>.info {
     font-size: 0.8em;
     text-align: center;
     position: relative;
